--- a/home.css
+++ b/home.css
@@ -1,9 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Playfair+Display&family=Quicksand:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Batang&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=MonteCarlo&display=swap');
 
 :root{
-    --lr-font:'Style Script', cursive;
-}
+    --font-size3: 48px;
+    --font-size4: 40px;
+    --font-size5: 36px;
+    --font-size6: 24px;
+    --font-size7: 20px;
+    --font-size8: 16px;
+    --font-size2: 56px;
+    --font-size1: 60px;
 
+    --font-family1: 'Nanum Myeongjo', serif;
+--font-family2: 'Playfair Display', serif;
+--font-family3: 'Didact Gothic', sans-serif;
+
+--font-side:'Gowun Batang', serif;
+
+--font-sexy: 'Fredericka the Great', cursive;
+--font-sexy1: 'Major Mono Display', monospace;
+--font-content:'Overpass', sans-serif;
+
+--font-q:'MonteCarlo', cursive;
+
+--color-1:#2F5D62;
+--color-tabs2:rgba(94, 139, 126,0.8);
+--color-3:#A7C4BC;
+--color-4:#DFEEEA;
+--color-tabs:rgba(242,246,245,0.8);
+--color-tabs3:rgba(1,1,1,0.4);
+
+
+--new-coloro: #2C3E50;
+--new-colort: #34495E;
+--new-colorth: #ECF0F1;
+--new-colorthn: rgba(236, 240, 241,0.4);
+--new-colorf: #bdc3c7;
+--new-colorw: #edf5e1;
+
+
+
+}
 
 
 #stick{
@@ -18,7 +60,8 @@
 
 body{
     /* position: fixed; */
-    
+    background: var(--new-colort);
+    color: var(--new-colorf);
     margin: 0;
     max-width: 100vw;
     /* overflow-x: hidden; */
@@ -54,6 +97,7 @@ body{
     /* flex-wrap: wrap; */
     justify-content: space-between;
     overflow-x: hidden;
+    position: relative;
 
 }
 
@@ -64,7 +108,7 @@ body{
 
 #cat_container{
     display: block;
-    height: 70%;
+    height: 80%;
     width: 100%;
     position: relative;
     /* background:gray; */
@@ -106,20 +150,38 @@ body{
 }
 
 #cat_btns{
+    position: absolute;
+    top: 40%;
     height: 15%;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .nbtns{
-    flex-grow: 1;
+    /* flex-grow: 1; */
+    /* display: flex; */
     display: flex;
+    align-items: center;
     justify-content: center;
-    font-family: var(--lr-font);
-    font-size: 2.5em;
-    text-shadow: 2px 2px 2px white;
+    width: 5vh;
+    height:5vh;
+    margin: 5%;
+    background: var(--new-colorthn);
+    font-family: var(--font-sexy);
+    font-size: 36px;
+    border-radius: 50%;
+    border:0;
+    color: white;
 }
 
+#qoute{
+    font-family: var(--font-q);
+    color: var(--new-colorw);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
 
 
