--- a/home.css
+++ b/home.css
@@ -48,19 +48,12 @@
 }
 
 
-#stick{
-    position: fixed;
-    display: block;
-    min-height: 100vh;
-    max-height: 100vh;
-    min-width: 100vw;
-    max-width: 100vw;
-    z-index: -1;
-}
+
 
 body{
     /* position: fixed; */
-    background: var(--new-colort);
+    /* background: var(--new-colort); */
+    background: url('assets/ba.png');
     color: var(--new-colorf);
     margin: 0;
     max-width: 100vw;
