--- a/homecss.css
+++ b/homecss.css
@@ -7,6 +7,7 @@
 
 body{
     position: relative;
+    width: 100vw;
     padding: 0;
     margin: 0;
     background: hsla(173, 52%, 20%, 1);
@@ -54,9 +55,10 @@ body{
 
 #container{
     display: block;
-    width: 95%;
+    width: 100%;
+    
     height: 100vh;
-    margin: 0 auto 0 auto;
+    
     overflow:auto;
     display: flex;
     flex-direction: column;
