--- a/homecss.css
+++ b/homecss.css
@@ -1,9 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Major+Mono+Display&family=Philosopher:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@600&display=swap');
+
 :root{
     --color-dark:#184D47;
     --color-light:#96BB7C;
     --color-white:#D6EFC7;
     --color-yellow:#EEBB4D;
+
+
+    --font-name:'Abril Fatface', cursive;
+
+    --font-2:'Cairo', sans-serif;
+    --font-1:'Marcellus SC', serif;
+    --font-3:'Josefin Slab', serif;
+
+    --font-4:'Mitr', sans-serif;
+
 }
+
+
 
 body{
     position: relative;
@@ -43,9 +60,10 @@ body{
     right: 20%;
     top: 40%;
     pointer-events: none;
-    background: url('assets/Lifa.png') no-repeat;
+    background: url('assets/Lifafa2.png') no-repeat;
     background-size: contain;
-    z-index: 1;
+    z-index: -1;
+    opacity: 0.5;
 }
 
 #catalog{
@@ -62,6 +80,8 @@ body{
     overflow:auto;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 #header{
@@ -70,8 +90,13 @@ body{
     height: 10%;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    /* transition: all 1s ease; */
+    color: white;
     /* flex-wrap: wrap; */
 }
+
+
 
 #header img{
     display: block;
@@ -80,18 +105,24 @@ body{
 }
 
 #scroll{
-    width: 80%;
+    width: 95%;
     height: 80%;
     border:1px solid white;
     border-radius: 10px;
     overflow-y: scroll;
+    scroll-behavior: smooth;
 
 }
+
+#scroll::-webkit-scrollbar{
+    width: 0px;
+}
+
 
 
 #lmenu{
     background: var(--color-dark);
-    display: block;
+    display: inline-block;
     height: 100%;
 }
 
@@ -103,13 +134,42 @@ body{
     width: 15%;
 }
 
+#headercall{
+    display: inline-block;
+}
+
+#lmenu, #headercall {
+    text-align: center;
+    
+    
+}
+
+
+
 .pages{
     height: 100%;
     width: 100%;
-    z-index: 10;
+    /* z-index: 100; */
     overflow-x: hidden;
 }
 
+
+#home{
+    display: flex;
+    flex-direction: column;
+    color: white;
+
+}
+
+#name{
+    font-family: var(--font-4);
+    font-weight: bold;
+    font-size: 24px;
+    text-shadow: 10px 20px 10px black;
+    -webkit-text-stroke: 1px black;
+    -webkit-text-fill-color: white;
+    /* color: white; */
+}
 #catalog{
     display: flex;
     flex-direction: column;
@@ -133,12 +193,15 @@ body{
     /* background:gray; */
     /* border: 2px solid white; */
     display: flex;
-    overflow: scroll;
+    overflow-x: scroll;
 
     
     /* justify-content: space-evenly; */
    
 }
+
+
+
 
 #catcat{
     position: absolute;
@@ -169,5 +232,61 @@ body{
     border-radius: 1rem;
     border: 1px solid white;
 
+}
+
+.cs{
+    width: fit-content;
+}
+
+#aboutbtn{
+    width: 40%;
+    color: var(--color-yellow);
+    display: flex;
+    justify-content: space-around;
+    border: 1px solid var(--color-yellow);
+    border-radius: 4vh;
+    padding: 2%;
+}
+
+#aboutbtn i{
+    color: black;
+}
+
+#company{
+    font-family: var(--font-3);
+}
+
+#intro {
+    font-family: var(--font-2);
+}
+
+#home{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
+#home p {
+    width: 80%;
+}
+
+
+
+
+@media screen and (max-width:480px) {
+    #smenu{
+        display: none;
+    }
+
+    #name{
+        font-size: 36px;
+    }
+
+    #company{
+        font-size: 24px;
+    }
+
+    
 }
 
