--- a/homecss.css
+++ b/homecss.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ramabhadra&display=swap');
 
 :root{
     --color-dark:#184D47;
@@ -16,7 +18,8 @@
     --font-1:'Marcellus SC', serif;
     --font-3:'Josefin Slab', serif;
 
-    --font-4:'Mitr', sans-serif;
+    --font-4:'Ramabhadra', sans-serif;
+    --font-5:'Amaranth', sans-serif;
 
 }
 
@@ -96,6 +99,10 @@ body{
     /* flex-wrap: wrap; */
 }
 
+.fas{
+    font-size: 24px;
+}
+
 
 
 #header img{
@@ -107,7 +114,7 @@ body{
 #scroll{
     width: 95%;
     height: 80%;
-    border:1px solid white;
+    /* border:1px solid white; */
     border-radius: 10px;
     overflow-y: scroll;
     scroll-behavior: smooth;
@@ -124,6 +131,10 @@ body{
     background: var(--color-dark);
     display: inline-block;
     height: 100%;
+    /* width: ; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #smenu{
@@ -136,13 +147,15 @@ body{
 
 #headercall{
     display: inline-block;
+    height: 100%;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
 }
 
-#lmenu, #headercall {
-    text-align: center;
-    
-    
-}
+
 
 
 
@@ -166,9 +179,8 @@ body{
     font-weight: bold;
     font-size: 24px;
     text-shadow: 10px 20px 10px black;
-    -webkit-text-stroke: 1px black;
-    -webkit-text-fill-color: white;
-    /* color: white; */
+    margin: 1%;
+    padding: 2%;
 }
 #catalog{
     display: flex;
@@ -235,29 +247,35 @@ body{
 }
 
 .cs{
-    width: fit-content;
+    width: 15%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
+
 
 #aboutbtn{
     width: 40%;
-    color: var(--color-yellow);
+    color: black;
+    background-color: var(--color-yellow);
     display: flex;
     justify-content: space-around;
     border: 1px solid var(--color-yellow);
     border-radius: 4vh;
     padding: 2%;
+    margin: 1%;
 }
 
-#aboutbtn i{
-    color: black;
-}
+
 
 #company{
     font-family: var(--font-3);
+    margin: 1%;
 }
 
 #intro {
-    font-family: var(--font-2);
+    font-family: var(--font-5);
 }
 
 #home{
@@ -269,6 +287,11 @@ body{
 
 #home p {
     width: 80%;
+    color: black;
+    background-color: white;
+    border-radius: 2vh 2vh;
+    padding: 2%;
+    margin: 1%;
 }
 
 
@@ -285,6 +308,11 @@ body{
 
     #company{
         font-size: 24px;
+    }
+
+    #aboutbtn{
+    margin: 1%;
+
     }
 
     
