--- a/homecss.css
+++ b/homecss.css
@@ -25,6 +25,7 @@
 
 
 
+
 body{
     position: relative;
     width: 100vw;
@@ -80,7 +81,7 @@ body{
     
     height: 100vh;
     
-    overflow:auto;
+    overflow:hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -94,6 +95,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     /* transition: all 1s ease; */
     color: white;
     /* flex-wrap: wrap; */
@@ -107,7 +109,12 @@ body{
 
 #header img{
     display: block;
-    max-height: 80%;
+    height: 90%;
+    padding: 2%;
+    background: white;
+    box-sizing: border-box;
+    border-radius: 0 5% 5% 0;
+    box-shadow: 2px 10px 10px black;
     
 }
 
@@ -129,9 +136,12 @@ body{
 
 #lmenu{
     background: var(--color-dark);
-    display: inline-block;
+    /* display: inline-block; */
     height: 100%;
-    /* width: ; */
+    width: 50%;
+    padding: 2%;
+    box-sizing: border-box;
+
     display: flex;
     align-items: center;
     justify-content: center;
@@ -148,6 +158,7 @@ body{
 #headercall{
     display: inline-block;
     height: 100%;
+    width: 50%;
     color: black;
     display: flex;
     align-items: center;
@@ -247,7 +258,8 @@ body{
 }
 
 .cs{
-    width: 15%;
+    width: 20%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
