--- a/agf.css
+++ b/agf.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Chonburi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oi&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@300&display=swap');
 
 
 :root{
@@ -9,7 +12,12 @@
     --color-yellow:#EEBB4D;
 
     --font-fixed:'Chonburi', cursive;
+    --font-ag:'Oi', cursive;
 
+    --font-content:'Karla', sans-serif;
+    --font-heading:'Gowun Dodum', sans-serif;
+
+   
 }
 
 *{
@@ -45,6 +53,9 @@ body{
     flex-direction: row;
     border-radius: 10px;
     padding: 2%;
+    box-shadow: 10px 10px 10px black;
+
+    
 }
 
 #nav img{
@@ -76,9 +87,10 @@ body{
     height: 90%;
     /* color: white; */
     font-family: var(--font-fixed);
-    font-size: 60vh;
-    color: transparent;
-    -webkit-text-stroke: 1px white;
+    font-size: 50vh;
+    color: white;
+    -webkit-text-stroke: 1px black;
+    text-shadow: 10px 10px 10px black;
     z-index: -1;
     
 }
@@ -91,11 +103,81 @@ body{
 #fixedhome2{
     bottom: -30%;
     left: 30%;
+    text-shadow: 20px 20px 20px black;
+
 }
 
 .pages{
     height: 90vh;
 }
+
+#dcompany{
+    font-family: var(--font-1);
+    color: white;
+    text-align: center;
+    font-size: 24px;
+    margin: 2%;
+}
+
+#company{
+    font-family: var(--font-content);
+    color: white;padding: 5%;
+    line-height: 1.5;
+    font-size: 18px;
+    text-align: center;
+
+}
+
+#banner{
+    display: grid;
+    width: 100%;
+    height: 70vh;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-areas: 
+    "b1 b2"
+    "b3 b3";
+}
+
+#homename{
+    /* font-family: var(--font-ag); */
+    color: white;
+    font-size: 48px;
+    
+}
+
+#banner1{
+    grid-area: b1;
+    background: url('assets/banner11.jpg');
+    background-size: cover;
+}
+#banner2{
+    grid-area: b2;
+    background: url('assets/banner33.jpg');
+    background-size: cover;
+
+
+
+}
+#banner3{
+    grid-area: b3;
+    background: url('assets/banner22.jpg');
+    background-size: cover;
+
+
+}
+
+
+.banners{
+    height: 30vh;
+    background-size: cover;
+    margin: 5%;
+    box-shadow: 10px 10px 10px black;
+
+
+}
+
+
+
 
 #catalog{
     display: flex;
@@ -104,6 +186,8 @@ body{
     justify-content: space-between;
     /* overflow-x: hidden; */
     position: relative;
+    overflow:hidden;
+
 
 }
 
@@ -128,7 +212,24 @@ body{
 }
 
 .heading{
-    height: 20%;
+    position: relative;
+    font-family: var(--font-heading);
+    color: white;
+    height: 30%;
+    font-size: 36px;
+    /* -webkit-text-stroke: 0.1px black; */
+    text-shadow: 10px 20px 10px black;
+}
+
+.headingfixed{
+    position: absolute;
+    font-size: 1500%;
+    color: white;
+    z-index: -1;
+    right: -20%;
+    top: 10%;opacity: 0.5;
+    text-shadow: 10px 20px 10px black;
+
 }
 
 
@@ -147,6 +248,7 @@ body{
 .picture{
    width: 100vw;
    height: 100%;
+   background:transparent;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
@@ -159,7 +261,7 @@ body{
     max-width: 50vw;
     max-height: 50%;
     margin: 0;
-    box-shadow: 4vh 4vh 4vh black;
+    box-shadow: 6vh 6vh 6vh black;
     border-radius: 1rem;
     border: 1px solid white;
 
