--- a/agf.css
+++ b/agf.css
@@ -43,10 +43,17 @@ body{
     align-items: center;
 }
 
-
-
 #nav{
-    height: 10%;
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    flex-direction: column;
+    transition: all 1s ease;
+    border-radius: 10px;
+}
+
+#upper{
+    height: 100%;
     width: 100%;
     background-color: var(--color-nav);
     justify-content: space-between;
@@ -54,10 +61,33 @@ body{
     display: flex;
     flex-direction: row;
     border-radius: 10px;
+    
     padding: 2%;
-    box-shadow: 10px 10px 10px black;
+    
 
     
+}
+
+#lower {
+    margin-top: 1%;
+    background-color: var(--color-nav);
+    border-radius: 10px;
+
+    width: 100%;
+    height: 0px;
+    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    
+}
+
+.navs{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 #nav img{
