--- a/agf.css
+++ b/agf.css
@@ -26,6 +26,15 @@
     box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+/* Optional: show position indicator in red */
+::-webkit-scrollbar-thumb {
+    background:var(--color-white);
+}
+
 body{
     background-color: var(--color-dark);
     height: 100vh;
@@ -99,6 +108,7 @@ body{
   
     height: 90%;
     width: 100%;
+    overflow-y: hidden;
     overflow-y: scroll;
     overflow-x: hidden;
 
@@ -520,10 +530,10 @@ body{
 
 #logp{
     width: 80%;
-    align-self: flex-end;
+    align-self: flex-start;
     color: white;
     font-family: var(--font-content);
-    text-align: right;
+    text-align: left;
     font-size: 18px;
     margin: 2%;
 
@@ -580,9 +590,72 @@ body{
 
 
 
-@media screen and (max-width:480px) {
-    
-    #name{
-        display: none;
+@media screen and (min-width:481px) {
+    .fixed{
+        height: 90%;
+        font-size: 50vh;
+        
     }
+    
+    #fixedhome1{
+        bottom: -10%;
+        left: 45%;
+    
+    }
+    #fixedhome2{
+        bottom: -30%;
+        left: 60%;
+    
+    }
+
+    .headingfixed{
+        right: -10%;
+
+    }
+
+    #logistics .headingfixed{
+        left: -10%;
+    }
+    
+   
+}
+
+
+@media screen and (min-width:768px) {
+    .fixed{
+        height: 90%;
+        font-size: 60vh;
+        
+    }
+    
+    #fixedhome1{
+        bottom: 0%;
+        left: 65%;
+    
+    }
+    #fixedhome2{
+        bottom: -20%;
+        left: 75%;
+    
+    }
+
+    .headingfixed{
+        right: 0%;
+        font-size: 2000%;
+
+    }
+
+    #logistics .headingfixed{
+        left: 0%;
+    }
+
+    #catalog{
+        margin-top: 10%;
+    }
+
+    #navlogo{
+        height: 100%;
+    }
+    
+   
 }
